--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mo</title>
   <link rel="icon" href="fill .css/images/logo.png" type="image/png">
+  <link rel="stylesheet" href="css/1/css-tem-3/style.css">
+
   <link rel="stylesheet" href="../enex-html/fill .css/Cairo.zip">
   <link rel="stylesheet" href="fill .css/fiill-css-tem-3.style.css.css">
   <link rel="stylesheet" href="../enex-html/fill.css/Work_Sans.zip">
@@ -942,3 +944,4 @@
 
 
 </html>
+
