--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mo</title>
   <link rel="icon" href="fill .css/images/logo.png" type="image/png">
-  <link rel="stylesheet" href="css/1/css-tem-3/style.css">
-
   <link rel="stylesheet" href="../enex-html/fill .css/Cairo.zip">
-  <link rel="stylesheet" href="fill .css/fiill-css-tem-3.style.css.css">
+  <link rel="stylesheet" href="/fill.css/fiill-css-tem-3.style.css">
   <link rel="stylesheet" href="../enex-html/fill.css/Work_Sans.zip">
   <link rel="stylesheet" href="../‏‏fontawesome-free-6.7.2-web - نسخة/css">
   <link rel="stylesheet" href="../‏‏Open_Sans ">
@@ -380,7 +378,7 @@
       </div>
     </div>
   </div>
-  <!-- Team Members -->   
+  <!-- Team Members -->
   <!-- Testimonials -->
   <div class=" Testimonials gallery" id="testimonials">
     <div class="container">
@@ -533,7 +531,7 @@
     </div>
   </div>
   <!-- Testimonials -->
-                  
+
   <!-- servses -->
   <div class="srv gallery" id="services">
     <div class="container">
@@ -585,7 +583,7 @@
         </div>
       </div>
     </div>
-  </div> 
+  </div>
   <!-- End Services -->
   <!-- skill -->
 
@@ -740,7 +738,7 @@
         </div>
       </div>
     </div>
-  </div> 
+  </div>
   <!-- Features -->
   <div class="Features" id="features">
     <div class="container ">
@@ -923,9 +921,6 @@
           </div>
         </div>
       </div>
-      <div class="end">
-        <h2>ALSHRQAWEY</h2>
-      </div>
     </footer>
   </div>
   <!-- FOOTER -->
@@ -937,11 +932,16 @@
       delay: 14400,
       once: false
     });
+    let up = document.querySelector(".fa-angle-double-up");
+    up.addEventListener("click", function () {
+      window.scrollTo({
+        top: 0,
+        behavior: "smooth"
+      });
+    });
   </script>
 
 
 </body>
 
-
 </html>
-
