--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>mo</title>
   <link rel="icon" href="fill .css/images/logo.png" type="image/png">
   <link rel="stylesheet" href="../enex-html/fill .css/Cairo.zip">
-  <link rel="stylesheet" href="/fill.css/css-tem-3.style.css.css">
+<link rel="stylesheet" href="css/1/css-tem-3/style.css">
+
   <link rel="stylesheet" href="../enex-html/fill.css/Work_Sans.zip">
   <link rel="stylesheet" href="../‏‏fontawesome-free-6.7.2-web - نسخة/css">
   <link rel="stylesheet" href="../‏‏Open_Sans ">
@@ -945,4 +946,5 @@
 </body>
 
 </html>
+
 
