--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" href="fill .css/images/logo.png" type="image/png">
   <link rel="stylesheet" href="../enex-html/fill .css/Cairo.zip">
 <link rel="stylesheet" href="css/1/css-tem-3/style.css">
+<link rel="stylesheet" href="css/1/css-tem-3/style.css">
+<link rel="stylesheet" href="css/1/css-tem-3/style.css">
 
   <link rel="stylesheet" href="../enex-html/fill.css/Work_Sans.zip">
   <link rel="stylesheet" href="../‏‏fontawesome-free-6.7.2-web - نسخة/css">
@@ -946,5 +948,6 @@
 </body>
 
 </html>
+
 
 
